<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/car_data_view"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="timwildauer.final_project.CarInfo" >

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/data_table_header" >

        <TextView
            android:text="@string/car_info_table_date"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2" />

        <TextView
            android:text="@string/car_info_table_mileage"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2" />

        <TextView
            android:text="@string/car_info_table_gallons"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2" />

        <TextView
            android:text="@string/car_info_table_full"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.1" />

        <TextView
            android:text="@string/car_info_table_price"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.18" />

        <TextView
            android:text="@string/car_info_table_mpg"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.12" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/data_view_line"
        android:layout_below="@+id/data_table_header"
        android:background="@android:color/darker_gray" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/data_view"
        android:layout_above="@+id/add_entry_button"
        android:layout_below="@+id/data_view_line" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_entry_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/add_info_entry_button"
        android:onClick="newData" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_entry_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/edit_info_entry_button"
        android:onClick="editData" />

</RelativeLayout>
