<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/car_list_edit"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="timwildauer.final_project.CarListEdit" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_car_buttons"
        android:layout_centerInParent="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_car_name_text"
            android:layout_alignBaseline="@+id/edit_car_name"
            android:layout_alignEnd="@+id/edit_car_model_text"
            android:textSize="20sp"
            android:text="@string/car_name_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_car_name"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/edit_car_name_text"
            android:hint="@string/car_name_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_car_make_text"
            android:layout_alignBaseline="@+id/edit_car_make"
            android:layout_alignEnd="@+id/edit_car_model_text"
            android:text="@string/car_make_text"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_car_make"
            android:layout_below="@+id/edit_car_name"
            android:layout_toEndOf="@+id/edit_car_make_text"
            android:hint="@string/car_make_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_car_model_text"
            android:layout_alignBaseline="@+id/edit_car_model"
            android:text="@string/car_model_text"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_car_model"
            android:layout_below="@+id/edit_car_make"
            android:layout_toEndOf="@+id/edit_car_model_text"
            android:hint="@string/car_model_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_car_year_text"
            android:layout_alignBaseline="@+id/edit_car_year"
            android:layout_alignEnd="@+id/edit_car_model_text"
            android:text="@string/car_year_text"
            android:textSize="20sp" />

        <EditText
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_car_year"
            android:layout_toEndOf="@+id/edit_car_year_text"
            android:layout_below="@+id/edit_car_model"
            android:hint="@string/car_year_hint" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous_edited_car_info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/move_to_previous_entry"
        android:textSize="20sp"
        android:onClick="indexBackwards" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_edited_car_info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/move_to_next_entry"
        android:textSize="20sp"
        android:onClick="indexForward" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_car_buttons"
        android:text="@string/delete_entry_string"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:onClick="deleteEntry" />

</RelativeLayout>
