<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/car_info_edit"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="timwildauer.final_project.CarInfoEdit" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/edit_data_view"
        android:layout_centerInParent="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_date_text"
            android:layout_alignEnd="@+id/edit_tank_full_text"
            android:layout_alignBaseline="@+id/edit_transaction_date_month"
            android:text="@string/date_string"
            android:textSize="20sp" />

        <EditText
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_transaction_date_month"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/edit_date_text"
            android:hint="@string/input_month"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_first_slash"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/edit_transaction_date_month"
            android:text="@string/slash"
            android:textSize="12pt" />

        <EditText
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_transaction_date_day"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/edit_first_slash"
            android:hint="@string/input_day"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_second_slash"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/edit_transaction_date_day"
            android:text="@string/slash"
            android:textSize="12pt" />

        <EditText
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_transaction_date_year"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/edit_second_slash"
            android:hint="@string/input_year"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_mileage_text"
            android:layout_alignEnd="@+id/edit_tank_full_text"
            android:layout_alignBaseline="@+id/edit_transaction_mileage"
            android:text="@string/mileage_string"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_transaction_mileage"
            android:layout_below="@+id/edit_transaction_date_month"
            android:layout_toEndOf="@id/edit_mileage_text"
            android:hint="@string/enter_transaction_mileage_string"
            android:textSize="20sp"
            android:inputType="number"
            android:maxLength="7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_gallons_text"
            android:layout_alignBaseline="@+id/edit_transaction_gallons"
            android:layout_alignEnd="@+id/edit_tank_full_text"
            android:text="@string/gallons_string"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_transaction_gallons"
            android:layout_below="@+id/edit_transaction_mileage"
            android:layout_toEndOf="@+id/edit_gallons_text"
            android:hint="@string/enter_transaction_gallons_string"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:maxLength="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_tank_full_text"
            android:layout_alignBottom="@+id/edit_transaction_tank_full"
            android:text="@string/tank_string"
            android:textSize="20sp"
            android:layout_marginBottom="3dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_transaction_tank_full"
            android:layout_below="@+id/edit_transaction_gallons"
            android:layout_toEndOf="@+id/edit_tank_full_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_price_text"
            android:layout_alignBaseline="@+id/edit_transaction_price"
            android:layout_alignEnd="@+id/edit_tank_full_text"
            android:text="@string/price_string"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_transaction_price"
            android:layout_below="@+id/edit_transaction_tank_full"
            android:layout_toEndOf="@+id/edit_price_text"
            android:hint="@string/enter_transaction_price_string"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:maxLength="6" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous_edited_car_info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/move_to_previous_entry"
        android:textSize="20sp"
        android:onClick="indexBackwards" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_edited_car_info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/move_to_next_entry"
        android:textSize="20sp"
        android:onClick="indexForward" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_data_view"
        android:text="@string/delete_entry_string"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:onClick="deleteEntry"/>

</RelativeLayout>
